# ovid

./: .clang-format  .gitignore  CMakeLists.txt  README.md  TODO.md  ast.h  ast.hpp  doc.md  lang.md  lang_ex_wip.ovd  main.cpp  mut_type_check.ovd  parser.y  passes.md  struct1.ovd  test.ovd  tokenizer.cpp  tokenizer.hpp  tokens.l
.github/workflows/: main.yml
examples/: ackermann.ovd  julia_ppm.ovd  mandelbrot.ovd
examples/raytrace/: raytrace.ovd  util.ovd
runtime/: CMakeLists.txt  bootstrap.c  bootstrap.ovd  bootstrap.ovdh  core.ovd  int_convert.ovd  lib.ovd  mem.ovd  vec.ovd
src/: CMakeLists.txt  ast.cpp  ast.hpp  ast_printer.cpp  ast_printer.hpp  ast_visitor.hpp  error.cpp  error.hpp  escape_analysis.cpp  escape_analysis.hpp  generics.cpp  generics.hpp  generics_pass.cpp  generics_pass.hpp  ir.cpp  ir.hpp  ir_printer.cpp  ir_printer.hpp  ir_visitor.hpp  llvm_codegen.cpp  llvm_codegen.hpp  main.cpp  name_mangle.cpp  name_mangle.hpp  parser.cpp  parser.hpp  resolve_pass.cpp  resolve_pass.hpp  symbols.cpp  symbols.hpp  tokenizer.cpp  tokenizer.hpp  type_check.cpp  type_check.hpp
src/compile/: ast.cpp  ast.hpp  ast_visitor.hpp  error.cpp  error.hpp  escape_analysis.cpp  escape_analysis.hpp  ir.cpp  ir.hpp  ir_visitor.hpp  llvm_codegen.cpp  llvm_codegen.hpp  main.cpp  name_mangle.cpp  name_mangle.hpp  parser.cpp  parser.hpp  resolve_pass.cpp  resolve_pass.hpp  symbols.hpp  tokenizer.cpp  tokenizer.hpp  type_check.cpp  type_check.hpp
src/lib/: bootstrap.c  bootstrap.ovdh
src/printers/: ast_printer.cpp  ast_printer.hpp  ir_printer.cpp  ir_printer.hpp
src/test/: misc_unit.cpp  tester.cpp  tester.hpp
src/test_framework/: CMakeLists.txt  misc_unit.cpp  run_tests.cpp  tester.cpp  tester.hpp
test/: test.cpp  tester.cpp  tester.hpp
test/tests/: nested_funcs.ovd  redef_var.ovd  test0.ovd  undeclared_ident.ovd  var_shadow.ovd
testing/: test1.ovd  test2.ovd
tests/: ast_check0.ovd  ast_check0.ovd.expect.ast  ast_check1.ovd  ast_check1.ovd.expect.ast  ast_check2.ovd  ast_check2.ovd.expect.ast  ast_check3.ovd  ast_check3.ovd.expect.ast  ast_check4.ovd  ast_check4.ovd.expect.ast  ast_check5.ovd  ast_check5.ovd.expect.ast  ast_check6.ovd  ast_check6.ovd.expect.ast  ast_check7.ovd  ast_check7.ovd.expect.ast  ast_check8.ovd  ast_check8.ovd.expect.ast  ast_check_native_fn.ovd  ast_check_native_fn.ovd.expect.ast  basic_ir_check.ovd  basic_ir_check.ovd.expect.ir  basic_parse.ovd  basic_parse.ovd.expect.ast  basic_pointer_type_check.ovd  block_scopes.ovd  bool_op_type_check.ovd  builtin_ops.ovd  char_lit.ovd  char_lit.ovd.expect.ast  char_lit.ovd.expect.ir  cmp1.ovd  cmp3.ovd  cmp5.ovd  compound_assign.ovd  disallow_struct_lit_pos.ovd  duplicate_named_args.ovd  duplicate_type_decl.ovd  escape.ovd  escape0.ovd  (+191 more)
